[3.6] bpo-30070: Fixed leaks and crashes in errors handling in the parser module. (GH-1131). (#1184)

(cherry picked from commit a79f4c219531c05fc8f670c1e4bbf12c081935d3)